@@ -40,10 +40,12 @@
 #     using TLS, in addition to ``authtype`` being set ``EXTERNAL``
 #
 # @param external_cert
-#   This specifies the path of the file containing the client certificate
+#   This specifies the path of the file containing the client certificate.
+#   Set ::autofs::pki to false if you don't want SIMP to manage this cert.
 #
 # @param external_key
 #   This specifies the path of the file containing the client certificate key
+#   Set ::autofs::pki to false if you don't want SIMP to manage this key.
 #
 # @param user
 #   This attribute holds the authentication identity used by authentication
@@ -79,8 +81,8 @@ class autofs::ldap_auth (
   Boolean                                       $tlsrequired         = true,
   Variant[Boolean, Enum['autodetect','simple']] $authrequired        = true,
   Autofs::Authtype                              $authtype            = 'LOGIN',
-  Stdlib::Absolutepath                          $external_cert       = "/etc/autofs/pki/simp/public/${facts['fqdn']}.pub",
-  Stdlib::Absolutepath                          $external_key        = "/etc/autofs/pki/simp/private/${facts['fqdn']}.pem",
+  Stdlib::Absolutepath                          $external_cert       = "/etc/pki/simp_apps/autofs/x509/public/${facts['fqdn']}.pub",
+  Stdlib::Absolutepath                          $external_key        = "/etc/pki/simp_apps/autofs/x509/private/${facts['fqdn']}.pem",
   Optional[String]                              $clientprinc         = undef,
   Optional[Stdlib::Absolutepath]                $credentialcache     = undef
 ) {
@@ -93,9 +95,8 @@ class autofs::ldap_auth (
     content => template("${module_name}/etc/ldap_auth.erb")
   }
 
-  if $authtype == 'EXTERNAL' and $::autofs::pki {
+  if $authtype == 'EXTERNAL' {
     include '::autofs::config::pki'
-
     Class['::autofs::config::pki'] ~> Class['::autofs::service']
   }
 }
